Re-enable subscription tests

--- a/ballerina-tests/graphql-subscription-test-suite/Dependencies.toml
+++ b/ballerina-tests/graphql-subscription-test-suite/Dependencies.toml
@@ -11,6 +11,7 @@ distribution-version = "2201.12.0"
 org = "ballerina"
 name = "auth"
 version = "2.14.0"
+scope = "testOnly"
 dependencies = [
 	{org = "ballerina", name = "crypto"},
 	{org = "ballerina", name = "jballerina.java"},
@@ -18,48 +19,46 @@ dependencies = [
 	{org = "ballerina", name = "lang.string"},
 	{org = "ballerina", name = "log"}
 ]
-modules = [
-	{org = "ballerina", packageName = "auth", moduleName = "auth"}
-]
 
 [[package]]
 org = "ballerina"
 name = "cache"
 version = "3.10.0"
+scope = "testOnly"
 dependencies = [
 	{org = "ballerina", name = "constraint"},
 	{org = "ballerina", name = "jballerina.java"},
 	{org = "ballerina", name = "task"},
 	{org = "ballerina", name = "time"}
 ]
-modules = [
-	{org = "ballerina", packageName = "cache", moduleName = "cache"}
-]
 
 [[package]]
 org = "ballerina"
 name = "constraint"
 version = "1.7.0"
+scope = "testOnly"
 dependencies = [
 	{org = "ballerina", name = "jballerina.java"}
+]
+modules = [
+	{org = "ballerina", packageName = "constraint", moduleName = "constraint"}
 ]
 
 [[package]]
 org = "ballerina"
 name = "crypto"
 version = "2.9.0"
+scope = "testOnly"
 dependencies = [
 	{org = "ballerina", name = "jballerina.java"},
 	{org = "ballerina", name = "time"}
-]
-modules = [
-	{org = "ballerina", packageName = "crypto", moduleName = "crypto"}
 ]
 
 [[package]]
 org = "ballerina"
 name = "data.jsondata"
 version = "1.1.0"
+scope = "testOnly"
 dependencies = [
 	{org = "ballerina", name = "jballerina.java"},
 	{org = "ballerina", name = "lang.object"}
@@ -69,20 +68,19 @@ dependencies = [
 org = "ballerina"
 name = "file"
 version = "1.12.0"
+scope = "testOnly"
 dependencies = [
 	{org = "ballerina", name = "io"},
 	{org = "ballerina", name = "jballerina.java"},
 	{org = "ballerina", name = "os"},
 	{org = "ballerina", name = "time"}
 ]
-modules = [
-	{org = "ballerina", packageName = "file", moduleName = "file"}
-]
 
 [[package]]
 org = "ballerina"
 name = "graphql"
 version = "1.16.2"
+scope = "testOnly"
 dependencies = [
 	{org = "ballerina", name = "auth"},
 	{org = "ballerina", name = "cache"},
@@ -100,7 +98,6 @@ dependencies = [
 	{org = "ballerina", name = "oauth2"},
 	{org = "ballerina", name = "observe"},
 	{org = "ballerina", name = "task"},
-	{org = "ballerina", name = "test"},
 	{org = "ballerina", name = "time"},
 	{org = "ballerina", name = "uuid"},
 	{org = "ballerina", name = "websocket"}
@@ -114,8 +111,49 @@ modules = [
 
 [[package]]
 org = "ballerina"
+name = "graphql_subscription_test_suite"
+version = "1.16.2"
+dependencies = [
+	{org = "ballerina", name = "constraint"},
+	{org = "ballerina", name = "graphql"},
+	{org = "ballerina", name = "graphql_test_common"},
+	{org = "ballerina", name = "http"},
+	{org = "ballerina", name = "lang.runtime"},
+	{org = "ballerina", name = "test"},
+	{org = "ballerina", name = "websocket"}
+]
+modules = [
+	{org = "ballerina", packageName = "graphql_subscription_test_suite", moduleName = "graphql_subscription_test_suite"},
+	{org = "ballerina", packageName = "graphql_subscription_test_suite", moduleName = "graphql_subscription_test_suite.five"},
+	{org = "ballerina", packageName = "graphql_subscription_test_suite", moduleName = "graphql_subscription_test_suite.four"},
+	{org = "ballerina", packageName = "graphql_subscription_test_suite", moduleName = "graphql_subscription_test_suite.one"},
+	{org = "ballerina", packageName = "graphql_subscription_test_suite", moduleName = "graphql_subscription_test_suite.six"},
+	{org = "ballerina", packageName = "graphql_subscription_test_suite", moduleName = "graphql_subscription_test_suite.three"},
+	{org = "ballerina", packageName = "graphql_subscription_test_suite", moduleName = "graphql_subscription_test_suite.two"}
+]
+
+[[package]]
+org = "ballerina"
+name = "graphql_test_common"
+version = "1.16.2"
+scope = "testOnly"
+dependencies = [
+	{org = "ballerina", name = "file"},
+	{org = "ballerina", name = "graphql"},
+	{org = "ballerina", name = "http"},
+	{org = "ballerina", name = "io"},
+	{org = "ballerina", name = "test"},
+	{org = "ballerina", name = "websocket"}
+]
+modules = [
+	{org = "ballerina", packageName = "graphql_test_common", moduleName = "graphql_test_common"}
+]
+
+[[package]]
+org = "ballerina"
 name = "http"
 version = "2.14.2"
+scope = "testOnly"
 dependencies = [
 	{org = "ballerina", name = "auth"},
 	{org = "ballerina", name = "cache"},
@@ -149,26 +187,23 @@ modules = [
 org = "ballerina"
 name = "io"
 version = "1.8.0"
+scope = "testOnly"
 dependencies = [
 	{org = "ballerina", name = "jballerina.java"},
 	{org = "ballerina", name = "lang.value"}
-]
-modules = [
-	{org = "ballerina", packageName = "io", moduleName = "io"}
 ]
 
 [[package]]
 org = "ballerina"
 name = "jballerina.java"
 version = "0.0.0"
-modules = [
-	{org = "ballerina", packageName = "jballerina.java", moduleName = "jballerina.java"}
-]
+scope = "testOnly"
 
 [[package]]
 org = "ballerina"
 name = "jwt"
 version = "2.15.0"
+scope = "testOnly"
 dependencies = [
 	{org = "ballerina", name = "cache"},
 	{org = "ballerina", name = "crypto"},
@@ -179,14 +214,12 @@ dependencies = [
 	{org = "ballerina", name = "log"},
 	{org = "ballerina", name = "time"}
 ]
-modules = [
-	{org = "ballerina", packageName = "jwt", moduleName = "jwt"}
-]
 
 [[package]]
 org = "ballerina"
 name = "lang.__internal"
 version = "0.0.0"
+scope = "testOnly"
 dependencies = [
 	{org = "ballerina", name = "jballerina.java"},
 	{org = "ballerina", name = "lang.object"}
@@ -196,18 +229,17 @@ dependencies = [
 org = "ballerina"
 name = "lang.array"
 version = "0.0.0"
+scope = "testOnly"
 dependencies = [
 	{org = "ballerina", name = "jballerina.java"},
 	{org = "ballerina", name = "lang.__internal"}
-]
-modules = [
-	{org = "ballerina", packageName = "lang.array", moduleName = "lang.array"}
 ]
 
 [[package]]
 org = "ballerina"
 name = "lang.decimal"
 version = "0.0.0"
+scope = "testOnly"
 dependencies = [
 	{org = "ballerina", name = "jballerina.java"}
 ]
@@ -225,6 +257,7 @@ dependencies = [
 org = "ballerina"
 name = "lang.int"
 version = "0.0.0"
+scope = "testOnly"
 dependencies = [
 	{org = "ballerina", name = "jballerina.java"},
 	{org = "ballerina", name = "lang.__internal"},
@@ -235,30 +268,34 @@ dependencies = [
 org = "ballerina"
 name = "lang.object"
 version = "0.0.0"
+scope = "testOnly"
 
 [[package]]
 org = "ballerina"
 name = "lang.regexp"
 version = "0.0.0"
+scope = "testOnly"
 dependencies = [
 	{org = "ballerina", name = "jballerina.java"}
-]
-modules = [
-	{org = "ballerina", packageName = "lang.regexp", moduleName = "lang.regexp"}
 ]
 
 [[package]]
 org = "ballerina"
 name = "lang.runtime"
 version = "0.0.0"
+scope = "testOnly"
 dependencies = [
 	{org = "ballerina", name = "jballerina.java"}
+]
+modules = [
+	{org = "ballerina", packageName = "lang.runtime", moduleName = "lang.runtime"}
 ]
 
 [[package]]
 org = "ballerina"
 name = "lang.string"
 version = "0.0.0"
+scope = "testOnly"
 dependencies = [
 	{org = "ballerina", name = "jballerina.java"},
 	{org = "ballerina", name = "lang.regexp"}
@@ -268,45 +305,40 @@ dependencies = [
 org = "ballerina"
 name = "lang.value"
 version = "0.0.0"
+scope = "testOnly"
 dependencies = [
 	{org = "ballerina", name = "jballerina.java"}
-]
-modules = [
-	{org = "ballerina", packageName = "lang.value", moduleName = "lang.value"}
 ]
 
 [[package]]
 org = "ballerina"
 name = "log"
 version = "2.12.0"
+scope = "testOnly"
 dependencies = [
 	{org = "ballerina", name = "io"},
 	{org = "ballerina", name = "jballerina.java"},
 	{org = "ballerina", name = "lang.value"},
 	{org = "ballerina", name = "observe"}
 ]
-modules = [
-	{org = "ballerina", packageName = "log", moduleName = "log"}
-]
 
 [[package]]
 org = "ballerina"
 name = "mime"
 version = "2.12.0"
+scope = "testOnly"
 dependencies = [
 	{org = "ballerina", name = "io"},
 	{org = "ballerina", name = "jballerina.java"},
 	{org = "ballerina", name = "lang.int"},
 	{org = "ballerina", name = "log"}
 ]
-modules = [
-	{org = "ballerina", packageName = "mime", moduleName = "mime"}
-]
 
 [[package]]
 org = "ballerina"
 name = "oauth2"
 version = "2.14.0"
+scope = "testOnly"
 dependencies = [
 	{org = "ballerina", name = "cache"},
 	{org = "ballerina", name = "crypto"},
@@ -315,26 +347,21 @@ dependencies = [
 	{org = "ballerina", name = "time"},
 	{org = "ballerina", name = "url"}
 ]
-modules = [
-	{org = "ballerina", packageName = "oauth2", moduleName = "oauth2"}
-]
 
 [[package]]
 org = "ballerina"
 name = "observe"
 version = "1.5.0"
+scope = "testOnly"
 dependencies = [
 	{org = "ballerina", name = "jballerina.java"}
-]
-modules = [
-	{org = "ballerina", packageName = "observe", moduleName = "observe"},
-	{org = "ballerina", packageName = "observe", moduleName = "observe.mockextension"}
 ]
 
 [[package]]
 org = "ballerina"
 name = "os"
 version = "1.10.0"
+scope = "testOnly"
 dependencies = [
 	{org = "ballerina", name = "io"},
 	{org = "ballerina", name = "jballerina.java"}
@@ -343,13 +370,12 @@ dependencies = [
 [[package]]
 org = "ballerina"
 name = "task"
-version = "2.9.0"
+version = "2.10.0"
+scope = "testOnly"
 dependencies = [
 	{org = "ballerina", name = "jballerina.java"},
-	{org = "ballerina", name = "time"}
-]
-modules = [
-	{org = "ballerina", packageName = "task", moduleName = "task"}
+	{org = "ballerina", name = "time"},
+	{org = "ballerina", name = "uuid"}
 ]
 
 [[package]]
@@ -370,17 +396,16 @@ modules = [
 org = "ballerina"
 name = "time"
 version = "2.7.0"
+scope = "testOnly"
 dependencies = [
 	{org = "ballerina", name = "jballerina.java"}
-]
-modules = [
-	{org = "ballerina", packageName = "time", moduleName = "time"}
 ]
 
 [[package]]
 org = "ballerina"
 name = "url"
 version = "2.6.0"
+scope = "testOnly"
 dependencies = [
 	{org = "ballerina", name = "jballerina.java"}
 ]
@@ -389,20 +414,19 @@ dependencies = [
 org = "ballerina"
 name = "uuid"
 version = "1.10.0"
+scope = "testOnly"
 dependencies = [
 	{org = "ballerina", name = "crypto"},
 	{org = "ballerina", name = "jballerina.java"},
 	{org = "ballerina", name = "lang.int"},
 	{org = "ballerina", name = "time"}
 ]
-modules = [
-	{org = "ballerina", packageName = "uuid", moduleName = "uuid"}
-]
 
 [[package]]
 org = "ballerina"
 name = "websocket"
 version = "2.15.0"
+scope = "testOnly"
 dependencies = [
 	{org = "ballerina", name = "auth"},
 	{org = "ballerina", name = "constraint"},
