--- a/gradle.properties
+++ b/gradle.properties
@@ -1,7 +1,7 @@
 org.gradle.caching=true
 group=io.ballerina.stdlib
-version=1.16.2-SNAPSHOT
-ballerinaLangVersion=2201.12.0
+version=1.17.0-SNAPSHOT
+ballerinaLangVersion=2201.13.0-20250825-150500-2c7270f2
 
 checkstylePluginVersion=10.12.0
 spotbugsPluginVersion=6.0.18
