--- a/gradle.properties
+++ b/gradle.properties
@@ -1,7 +1,7 @@
 org.gradle.caching=true
 group=io.ballerina.stdlib
 version=1.17.0-SNAPSHOT
-ballerinaLangVersion=2201.13.0-20250825-150500-2c7270f2
+ballerinaLangVersion=2201.13.0-20250924-081800-3dae8c03
 
 checkstylePluginVersion=10.12.0
 spotbugsPluginVersion=6.0.18
@@ -16,15 +16,15 @@ jacocoVersion=0.8.10
 # Ballerina Library Dependencies
 # Level 01
 stdlibIoVersion=1.8.0
-stdlibTimeVersion=2.7.0
+stdlibTimeVersion=2.8.0-20250925-190600-b4eb216
 stdlibUrlVersion=2.6.0
 
 # Level 02
 stdlibConstraintVersion=1.7.0
-stdlibCryptoVersion=2.9.0
-stdlibLogVersion=2.12.0
+stdlibCryptoVersion=2.9.1-20250925-191400-cd7bbcf
+stdlibLogVersion=2.13.0
 stdlibOsVersion=1.10.0
-stdlibTaskVersion=2.7.0
+stdlibTaskVersion=2.11.0
 
 # Level 03
 stdlibCacheVersion=3.10.0
@@ -34,15 +34,15 @@ stdlibUuidVersion=1.10.0
 
 # Level 04
 stdlibAuthVersion=2.14.0
-stdlibDataJsonDataVersion=1.1.0
+stdlibDataJsonDataVersion=1.1.2
 stdlibJwtVersion=2.15.0
-stdlibOAuth2Version=2.14.0
+stdlibOAuth2Version=2.15.0-20250925-192400-0788399
 
 # Level 05
-stdlibHttpVersion=2.14.0
+stdlibHttpVersion=2.15.0-20250925-202800-b603d22
 
 # Level 06
-stdlibWebsocketVersion=2.15.0-20250430-104500-06d1dfd
+stdlibWebsocketVersion=2.15.0-20250925-213400-0bd49e5
 
 # Ballerinax Observer
 observeVersion=1.5.0
