Reenable subscription tests and update deprecated API usage

--- a/.github/workflows/build-with-bal-test-graalvm.yml
+++ b/.github/workflows/build-with-bal-test-graalvm.yml
@@ -35,5 +35,5 @@ jobs:
             lang_tag: ${{ inputs.lang_tag }}
             lang_version: ${{ inputs.lang_version }}
             native_image_options: ${{ inputs.native_image_options }}
-            additional_ubuntu_build_flags: '-x :graphql-compiler-plugin-tests:test -Pdisable=subscriptions'
+            additional_ubuntu_build_flags: '-x :graphql-compiler-plugin-tests:test'
             additional_windows_build_flags: '-x :graphql-compiler-plugin-tests:test'
