--- a/gradle.properties
+++ b/gradle.properties
@@ -10,7 +10,7 @@ downloadPluginVersion=5.4.0
 releasePluginVersion=2.8.0
 testngVersion=7.6.1
 eclipseLsp4jVersion=0.12.0
-ballerinaGradlePluginVersion=2.3.0
+ballerinaGradlePluginVersion=2.3.1
 jacocoVersion=0.8.10
 
 # Ballerina Library Dependencies
@@ -21,7 +21,7 @@ stdlibUrlVersion=2.6.0
 
 # Level 02
 stdlibConstraintVersion=1.7.0
-stdlibCryptoVersion=2.9.1-20250925-191400-cd7bbcf
+stdlibCryptoVersion=2.9.2
 stdlibLogVersion=2.13.0
 stdlibOsVersion=1.10.0
 stdlibTaskVersion=2.11.0
